[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/hud/HUD.gd" type="Script" id=1]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
margin_bottom = 32.0

[node name="TimeLabel" type="Label" parent="VBoxContainer"]
margin_right = 1920.0
margin_bottom = 71.0
text = "0"
align = 1

[node name="ScoreLabel" type="Label" parent="VBoxContainer"]
margin_top = 75.0
margin_right = 1920.0
margin_bottom = 146.0
text = "0"
align = 1

[node name="Message" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -7.0
margin_bottom = 7.0
text = "Собери биткоины!"
align = 1

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -128.5
margin_top = -165.0
margin_right = 128.5
margin_bottom = -80.0
text = "Начать!"

[node name="HSlider" type="HSlider" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -340.0
margin_top = -285.0
margin_right = 340.0
margin_bottom = -253.0
min_value = 1.0
value = 1.0

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="value_changed" from="HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
